<resources>
    <string name="app_name">Ask Me</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="singup_here">SingUp here</string>
    <string name="ajouter_professeur">Ajouter Professeur</string>
    <string name="etudiant">Etudiant</string>
    <string name="professeur">Professeur</string>
    <string name="Password">Password</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="log_here">log here</string>
    <string name="todo">TODO</string>
    <string name="write_message">write message…</string>
    <string name="logout">logout</string>
    <string name="ajouter_classe">Ajouter Classe</string>
    <string name="classe_name">Classe Name</string>
    <string name="classe_password">Classe Password</string>
    <string name="create_classe_here">Create Classe Here</string>
    <string name="create_classe">Create Classe</string>
    <string name="create_professeur">Create Professeur</string>
    <string name="string_classe_name">\@string/classe_name</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter Password :</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="entrez_le_mot_de_passe_de_classe">Entrez le mot de passe de classe</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="commancer_le_chat">commancer le chat</string>
    <string name="delete_classe">Delete Classe</string>
    <string name="delete_professeur">Delete Professeur</string>
    <string name="ajouter_qcm">Ajouter QCM</string>
</resources>
