<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Create_Prof">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_message"
        android:src="@drawable/images"
        android:layout_marginTop="40dp"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:contentDescription="@android:string/no" />
    <EditText
        android:id="@+id/name_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableStart="@drawable/personne"
        android:drawableLeft="@drawable/personne"
        android:ems="20"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/email_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/adb"
        android:drawableLeft="@drawable/adb"
        android:ems="20"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/password_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:ems="20"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/button_add_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:text="@string/register" />
    <Button
        android:id="@+id/button_add_prof_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:text="@string/cancel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/singup_here"/>

</LinearLayout>







</RelativeLayout>