<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".Password_verification">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:text="@string/entrez_le_mot_de_passe_de_classe" />

    <EditText
        android:id="@+id/password_verif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/passwordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:onClick="startChat"
        android:text="@string/commancer_le_chat" />
</LinearLayout>